--- a/lab2_php/style/sign_in.css
+++ b/lab2_php/style/sign_in.css
@@ -1,37 +1,41 @@
 @charset "utf-8";
 
 body{
-    margin:0;
-    background:linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ), url(bgpic.jpg) no-repeat;
-    background-size: cover;
+    background-color: #ffffff;
+    background-image:url(../image/background_pic2.jpg);
+    background-position: center; 
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 .login_box{
     width: 20%;
     height: 30%;
-    background: #000000AA;
+    background: ghostwhite;
     margin: auto;
     margin-top: 5%;
     text-align: center;
     border-radius: 10px;
-    padding: 50px 50px;
+    padding: 10px 10px;
+    color: dodgerblue;
+    font-size: 16px;
 }
 
 .login_title {
-    color: #CDE5FF;
+    color: dodgerblue;
     font-size: 18pt;
     margin-top: 5%;
 }
 
 .text{
-    color: #CDE5FF;
+    color: dodgerblue;
     font-size: 12pt;
     text-decoration: underline;
 }
 
 h1{
     font-size:30px;
-    color:#CDE5FF;
+    color:#ffffff;
 }
 
 input[type=text], select {
